<resources>
    <string name="app_name">REFUGEEDIARIES</string>
    <string name="explore">Explore</string>
    <string name="mystories">My Stories</string>
    <string name="newstory">Add story</string>
    <string name="notifications">Notifications</string>
    <string name="myprofile">My Profile</string>
    <string name="user">User XY</string>
    <string name="timeline">UserXY stories</string>
    <string name="app_label">Label</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="contact">find a contact&#8230;</string>
    <string name="search">Search</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">Dictionary</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search the dictionary</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of words</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Press the search key to look up a word</string>

    <string name="age">Age:</string>
    <string name="language">Language:</string>
    <string name="nationality">Nationality:</string>
    <string name="tags">Tags:</string>
    <string name="distance">Distance:</string>

    <string name="search_title">Search</string>

    <string name="placeholder">placeholder</string>
    
    <string name="tab_tags">My Stories</string>
    <string name="tab_map">Explore</string>
    <string name="tab_settings">Notifications</string>
    <string name="title_activity_my">MyActivity</string>

    <!--New Story-->
    <string name="lbl_title">Title</string>
    <string name="title_hint">Your title</string>

    <string name="lbl_location">Location</string>
    <string name="location_hint">Story-location here</string>

    <string name="lbl_date">Date</string>

    <string name="lbl_story_text">Story</string>
    <string name="story_hint">Your story here (max. 200 words)</string>
    <string name="lbl_story_picture">Pictures</string>

    <string name="btn_add_photos">Add photos</string>
    <string name="btn_clear_all_photos">Clear all</string>

    <string name="btn_publish_story">Publish</string>

    <string name="msg_no_stories">You haven\'t added any stories yet</string>
    
    <array name="story_options">
        <item>Edit story</item>
        <item>Delete story</item>
    </array>

    <string name="delete_check">Do you really want to delete this story?</string>
    <string name="delete_true">Delete</string>
    <string name="report_check">Do you really want report this user?</string>
    <string name="report_true">Report</string>
    <string name="friendship_check">Do you really want to send a friendship request to this user?</string>
    <string name="friendship_true">Send request</string>
    <string name="meeting_check">If you want, leave a message for the user before the request:</string>
    <string name="meeting_true">Request meeting</string>
    <string name="cancel">Cancel</string>

    <string name="btn_request_meeting">Request Meeting</string>
    <string name="btn_report">Report User</string>
    <string name="btn_send_invite">Friendship Request</string>
    <string name="btn_see_friendlist">Show Friendlist</string>
    <string name="user_age">Age</string>
    <string name="user_location">Location</string>
    <string name="user_gender">Gender</string>
    <string name="user_country">Country of origin</string>
    <string name="user_language">Languages</string>
    <string name="user_interests">Interests</string>
    <string name="user_email">E-Mail</string>

    <string name="title_activity_custom_gallery">Gallery</string>
    <string name="btn_ok">OK</string>

    <string name="sharedPref">MySharedPref</string>

    <array name="select_photos_options_array">
        <item>Take from camera</item>
        <item>Select from gallery</item>
    </array>

    <string name="title_select_photos">Add photos</string>
    <string name="follow">You are now following this user</string>
    <string name="unfollow">You are not following this user anymore!</string>
    <string name="like">You have shown your appreciation for this user</string>
    <string name="unlike">You do not show your appreciation for this user anymore!</string>
    <string name="meeting_request_sent">A request for a meeting was sent</string>
    <string name="meeting_request_sent_already">Request for a meeting has already been sent</string>

</resources>
