<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/story_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/lbl_new_story_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/lbl_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/new_story_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/lbl_new_story_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_location"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/new_story_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_hint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/lbl_new_story_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/new_story_date"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lbl_new_story_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_story_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ScrollView
            android:id="@+id/story_wrapper"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <EditText
                android:id="@+id/new_story_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/story_hint"
                android:inputType="textMultiLine" />
        </ScrollView>

        <Button
            android:id="@+id/btn_add_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_add_story" />

    </LinearLayout>

</ScrollView>