<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="8dip">

    <!--  ListRow Left sied Thumbnail image -->
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:background="@drawable/image_bg">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="65dp"
            android:layout_height="75dp" />
    </LinearLayout>

    <!-- Title Of Song-->
    <TextView
        android:id="@+id/txt_lbl_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/age"
        android:textSize="12dip" />

    <!-- Artist Name -->
    <TextView
        android:id="@+id/txt_lbl_spokenLanguages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_lbl_age"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/language"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/txt_lbl_nationality"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_lbl_spokenLanguages"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/nationality"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/txt_lbl_tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_lbl_nationality"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/tags"
        android:textSize="12dip" />

    <TextView
        android:id="@+id/txt_lbl_distance"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_lbl_tags"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/distance"
        android:textSize="12dip" />
</RelativeLayout>