<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/timeline_story_shape"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/user_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:background="@drawable/timeline_header_shape">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <at.ac.tuwien.inso.refugeestories.utils.components.RoundedImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:id="@+id/user_picture"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tutanchamun"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_forename"
                        android:layout_weight="1"
                        android:layout_marginRight="4dp"
                        android:gravity="right"
                        android:textColor="@color/white"
                        android:layout_marginBottom="10dp"
                        android:text="username"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_surname"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:layout_marginBottom="10dp"
                        android:text="username"/>

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageButton
                    android:id="@+id/btn_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/heart_border_64dp"
                    android:textSize="12dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="Like" />
                <Button
                    android:id="@+id/btn_see_friendlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="12dp"
                    android:background="@drawable/btn_shape"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/btn_see_friendlist"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/like_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Appreciations: "
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/userdata_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lbl_container1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:text="@string/user_age"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_age"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lbl_container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:text="@string/user_gender"/>
                <TextView
                    android:id="@+id/user_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lbl_container3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:text="@string/user_location"/>
                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lbl_container4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:text="@string/user_country"/>
                <TextView
                    android:id="@+id/user_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:layout_gravity="center"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lbl_container5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:text="@string/user_language"/>
                <TextView
                    android:id="@+id/user_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lbl_container6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:text="@string/user_interests"/>
                <TextView
                    android:id="@+id/user_interests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lbl_container7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="2"
                    android:textColor="@color/white"
                    android:id="@+id/lbl_email"
                    android:text="@string/user_email"/>
                <TextView
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:textSize="14dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
